--- a/watchClock/Base.lproj/Main.storyboard
+++ b/watchClock/Base.lproj/Main.storyboard
@@ -226,7 +226,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Weather Location" id="zoH-xQ-dNy">
+                            <tableViewSection headerTitle="Weather Icon Size" id="zoH-xQ-dNy">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="Ya0-Nl-svS">
                                         <rect key="frame" x="0.0" y="188" width="375" height="44"/>
@@ -242,11 +242,11 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="pMm-Mh-9PC">
+                                                <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="20" minValue="10" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="pMm-Mh-9PC">
                                                     <rect key="frame" x="128" y="6" width="189" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <connections>
-                                                        <action selector="IconSizeSliderValueChanged:" destination="qo0-3A-0xJ" eventType="valueChanged" id="lyG-Mg-HMC"/>
+                                                        <action selector="IconSizeSliderValueChanged:" destination="qo0-3A-0xJ" eventType="valueChanged" id="1ch-XG-uwQ"/>
                                                     </connections>
                                                 </slider>
                                             </subviews>
